# vulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/vulkan-engine/: CommandPool.hpp  HelloTriangleApp.hpp  Pipeline.hpp  RenderPass.hpp  VulkanDevice.hpp  VulkanInstance.hpp  VulkanSwapChain.hpp
include/vulkan-engine/audio/: AudioEngine.hpp  AudioListener.hpp  AudioSource.hpp
include/vulkan-engine/components/: Component.hpp  Light.hpp  MeshRenderer.hpp
include/vulkan-engine/core/: Buffer.hpp  Config.hpp  Engine.hpp  EventSystem.hpp  GlfwWindow.hpp  InputManager.hpp  Logger.hpp  MemoryManager.hpp  Result.hpp  Time.hpp  VulkanDevice.hpp  VulkanInstance.hpp  VulkanSwapChain.hpp
include/vulkan-engine/core/interfaces/: IWindow.hpp
include/vulkan-engine/examples/: HelloTriangleApp.hpp  ModelViewerApp.hpp
include/vulkan-engine/math/: Transform.hpp
include/vulkan-engine/physics/: Collider.hpp  PhysicsWorld.hpp  RigidBody.hpp
include/vulkan-engine/rendering/: Camera.hpp  CameraController.hpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorSet.hpp  FirstPersonCameraController.hpp  OrbitCameraController.hpp  Pipeline.hpp  PipelineManager.hpp  RenderPass.hpp  Renderer.hpp  ShadowPass.hpp  Uniforms.hpp  Vertex.hpp
include/vulkan-engine/resources/: Material.hpp  MemoryManager.hpp  Mesh.hpp  MeshLoader.hpp  PrimitiveFactory.hpp  ResourceManager.hpp  Texture.hpp  TextureLoader.hpp
include/vulkan-engine/scene/: SceneNode.hpp  SceneSerializer.hpp
shaders/: compile_shaders.sh  shader.frag  shader.vert  shadow.frag  shadow.vert
src/: HelloTriangleApp.cpp  ModelViewerApp.cpp  main.cpp  model_viewer_main.cpp
src/audio/: AudioEngine.cpp  AudioListener.cpp  AudioSource.cpp
src/components/: Light.cpp  MeshRenderer.cpp
src/core/: Buffer.cpp  Engine.cpp  EventSystem.cpp  GlfwWindow.cpp  InputManager.cpp  Logger.cpp  MemoryManager.cpp  Result.cpp  Time.cpp  VmaImplementation.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanSwapChain.cpp
src/math/: Transform.cpp
src/physics/: Collider.cpp  PhysicsWorld.cpp  RigidBody.cpp
src/rendering/: Camera.cpp  CameraController.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorSet.cpp  FirstPersonCameraController.cpp  OrbitCameraController.cpp  Pipeline.cpp  PipelineManager.cpp  RenderPass.cpp  Renderer.cpp  ShadowPass.cpp  Vertex.cpp
src/resources/: Material.cpp  Mesh.cpp  MeshLoader.cpp  PrimitiveFactory.cpp  ResourceManager.cpp  Texture.cpp  TextureLoader.cpp
src/scene/: SceneNode.cpp  SceneSerializer.cpp
